[package]
name = "test-please-ignore"
description = "Test package, please ignore"
repository = "https://github.com/nmoutschen/test-please-ignore"
version = "0.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
